@@ -1,2 +1,2 @@
 #
-__version__ = '2.2.5.dev2'
+__version__ = '2.2.5.dev3'
